# iree

./: .gitmodules  CMakeLists.txt
build_tools/cmake/: iree_cc_library.cmake  (+3 more)
compiler/: pyproject.toml  setup.py
compiler/src/: CMakeLists.txt
compiler/src/iree/compiler/API/: CMakeLists.txt
compiler/src/iree/compiler/Codegen/Common/: OptimizeTensorInsertExtractSlices.cpp  Passes.td
compiler/src/iree/compiler/Codegen/Common/GPU/: GPUHeuristics.cpp
compiler/src/iree/compiler/Codegen/Common/GPU/test/: gpu_tensor_alloc.mlir
compiler/src/iree/compiler/Codegen/Common/test/: tile_and_distribute_to_workgroups.mlir
compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/: IREECodegenAttrs.td
compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/: IREEGPUAttrs.cpp  IREEGPUAttrs.td
compiler/src/iree/compiler/Codegen/Dialect/GPU/TargetUtils/: ConfigUtils.cpp  ConfigUtils.h
compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR/: VectorExtDialect.h  VectorExtOps.cpp  VectorExtOps.td
compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR/test/: roundtrip.mlir
compiler/src/iree/compiler/Codegen/LLVMGPU/: BUILD.bazel  CMakeLists.txt  KernelConfig.cpp  KernelConfig.h  LLVMGPUConfigureTensorLayouts.cpp  LLVMGPULowerExecutableTarget.cpp  Passes.cpp  Passes.h  Passes.td  PoseidonEpilogue.cpp  PoseidonInlineKernel.cpp  PoseidonOutlineForall.cpp  PoseidonPipeline.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/test/: cast_type_to_fit_mma.mlir  configure_tensor_layout.mlir
compiler/src/iree/compiler/GlobalOptimization/: CMakeLists.txt  Passes.td  RaiseToAffineOps.cpp
(+6 files in other folders)
